# Assistant

./: .env.example  .gitignore  BUILD.md  CHAT_UI_SPEC.md  CLAUDE.md  Dockerfile  README.md  TrueStats_Еженедельныи_отчет_шаблон_1.docx  compass_artifact_wf-2f0a496d-0411-4b07-bdef-bd0dee8e600c_text_markdown.md  compass_artifact_wf-950a49be-4291-4633-b241-1d8ea14a98e9_text_markdown.md  docker-compose.yml  otel-collector-config.yaml  plan.md  pyproject.toml  run.bat  version_info.txt  workspace_agent.spec
.github/workflows/: release.yml  test.yml
apps_script_src/aggregator/: .clasp.json  .claspignore  Code.gs  Code.js  appsscript.json
config/: librechat-oidc.example.yaml  librechat.example.yaml  prometheus.yml  rbac.csv  rbac_model.conf
deploy/k8s/: 00-namespace.yaml  10-configmap.yaml  11-secret.example.yaml  20-postgres.yaml  21-redis.yaml  30-agent.yaml  40-ingress.yaml  README.md
docs/: DISTRIBUTION.md  HANDOFF.md  PHASE_0_DEPLOY.md  PHASE_14_PLAN.md  PHASE_14_SETUP.md  SESSION_HANDOFF_2026-05-24.md  TOOLS_INVENTORY.md
docs/superpowers/plans/: 2026-05-16-google-workspace-chat-agent.md
migrations/: env.py
migrations/versions/: 001_phase0_scaffold.py  002_phase0_core_schema.py
scripts/: bootstrap_authentik.sh  build_10b_chars.py  build_heavy_tier_b.py  build_phase14_fixtures.py  dump_tools_inventory.py  migrate_jsonl_to_pg.py  seed_claude_test.py  stress_production.py  stress_test.py  sweep_tools.py  verify_phase14_setup.py
src/: agent.py  app.py  auth.py  auth_oidc.py  chats.py  cli.py  config.py  desktop.py  embeddings.py  json_store.py  mcp_http.py  metrics.py  people.py  policy.py  rbac.py  setup.py  telegram_bot.py  telegram_bot_loop.py  tenancy.py  tool_router.py  updater.py
src/queue/: __init__.py  worker.py
src/tools/: _apps_script_chunked.py  _audio_transcribe.py  _bulk_payload.py  _claude_query.py  _docx_extract.py  _docx_template.py  _errors.py  _gdoc_extract.py  _gdoc_url.py  _gsheet_extract.py  _idempotency.py  _paginate.py  _phase14_config.py  _quota.py  _read_cache.py  _retry.py  _safe_id.py  _vendor_helpers.py  _vendor_http.py  aliases.py  analytics.py  analytics_local.py  apps_script.py  apps_script_api.py  bank_parser.py  browser.py  calendar.py  chats.py  cloud_logging.py  contacts.py  docs.py  drive.py  edo.py  excel.py  external.py  file_analyze.py  file_extract.py  forms.py  gcp.py  gmail.py  (+29 more)
src/tools/bank_parsers/: __init__.py  _stub.py  alfa.py  clientbank_1c.py  common.py  dispatch.py  gazprom.py  modul.py  ozon.py  pdf.py  raif.py  sber.py  (+6 more)
static/: accounts.html  index.html
tests/: conftest.py  test_agent_loop.py  test_analytics_onec_deep.py  test_app.py  test_apps_script_api_ad_hoc.py  test_apps_script_chunked.py  test_audio_transcribe.py  test_auth.py  test_browser_drive_open.py  test_bulk_payload.py  test_bulk_tools.py  test_calendar_adapter.py  test_chat_history.py  test_chats_persistence.py  test_classify_intent.py  test_cleanup_sweepers.py  test_contacts_adapter.py  test_docs_adapter.py  test_docx_extract.py  test_docx_template.py  test_drive_adapter.py  test_drive_resolve_link.py  test_dry_run.py  test_error_taxonomy.py  test_excel.py  test_external_phase10.py  test_file_analyze.py  test_file_extract.py  test_forms_adapter.py  test_frontend_smoke.py  test_gdoc_extract.py  test_gdoc_url.py  test_gmail_adapter.py  test_idempotency.py  test_infra_service_deep.py  test_knowledge.py  test_logistics_deep.py  test_marketplace_depth.py  test_marketplace_smoke.py  test_messaging_payments_deep.py  (+40 more)
tests/fixtures/: sample.xlsx
tests/integration/: conftest.py  test_calendar_phase6_live.py  test_docs_phase7_live.py  test_drive_phase4_live.py  test_forms_tasks_contacts_phase9_live.py  test_gmail_phase5_live.py  test_marketplace_live.py  test_phase0_foundation_live.py  test_phase12_live.py  test_sheets_phase1_live.py  test_sheets_phase2_live.py  test_sheets_phase3_live.py  test_slides_phase8_live.py
