[project]
name = "google-work-agent"
version = "0.1.0"
description = "Local chat agent that drives Google Drive / Sheets / Apps Script via Claude"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "google-api-python-client>=2.150.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.20",
    "claude-agent-sdk>=0.2.82",
    "pywebview>=6.2.1",
    "sentence-transformers>=5.5.0",
    "playwright>=1.59.0",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pyinstaller>=6.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
