[project]
name = "google-work-agent"
version = "0.1.0"
description = "Local chat agent that drives Google Drive / Sheets / Apps Script via Claude"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "google-api-python-client>=2.150.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.20",
    "claude-agent-sdk>=0.2.82",
    "pywebview>=6.2.1",
    "sentence-transformers>=5.5.0",
    "playwright>=1.59.0",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "beautifulsoup4>=4.14.3",
    "reportlab>=4.5.1",
    "lxml>=6.1.1",
    "python-docx>=1.1.0",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pyinstaller>=6.20.0",
]

# Optional dependencies for marketplace / ML / analytics tool families.
# All marketplace tools work without these — they're for the Russian
# integrations + local ML wrappers that lazy-import their backends.
#
# Install per-feature:
#   uv pip install -e ".[ml]"       # Natasha NER, sentence-transformers
#   uv pip install -e ".[ocr]"      # pytesseract + paddleocr
#   uv pip install -e ".[analytics]"# duckdb + pandera
#   uv pip install -e ".[all]"      # everything above
[project.optional-dependencies]
ml = [
    "natasha>=1.6.0",
    "pymorphy3>=2.0.0",  # natasha runtime dep
]
ocr = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    # paddleocr is heavy (~500MB models); install on demand:
    #   pip install paddleocr paddlepaddle
]
analytics = [
    "duckdb>=1.4.0",
    "pandera>=0.20.0",
]
imap = [
    # imaplib is in stdlib; nothing to install. Kept as a placeholder so
    # `[imap]` extra is a documented entry point.
]
all = [
    "natasha>=1.6.0",
    "pymorphy3>=2.0.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "duckdb>=1.4.0",
    "pandera>=0.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "integration: hits live Google APIs against egor.titt@gmail.com / CLAUDE-TEST folder; requires LIVE_GOOGLE_TESTS=1 env var to actually run (otherwise auto-skipped)",
]
